--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
-@media screen {
-    
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    body {
+        background-image: linear-gradient(to bottom, var(--cor03), var(--cor05) );
+    }
+
+    main {
+        width: 500px;
+    }
 }
