--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,9 +3,60 @@
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body {
         background-image: linear-gradient(to bottom, var(--cor03), var(--cor05) );
+        display: flex;
+        justify-content: center;
     }
 
     main {
-        width: 500px;
+        width: 80vw;
+        height: 300px;
+        display: flex;
+        align-items: center;
+        
     }
+
+    section#imagem {
+        flex: 2;
+        height: 300px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        border-top-right-radius: 0px;
+    }
+
+    section#conteudo {
+       flex: 3;
+       display: flex; /* Adicione esta linha */
+        flex-direction: column; /* Empilhe elementos verticalmente */
+        justify-content: space-between; /* Espaçamento igual entre os elementos */
+        align-items: center; /* Centralizar elementos horizontalmente */
+        
+    }
+
+    section > form > p {
+        flex: 1;
+        max-width: 340px;
+        
+        margin-bottom: 4px;
+        padding: 2px;
+        border-radius: 7px;
+        text-align: right;
+        
+        
+   
+
+
+    }
+        
+    input#entrar {
+        width: 235px;
+        border-radius: 7px;
+        color: white;
+        border: 0px;
+        background-color: var(--cor04);
+        display: block;
+        text-align: center;
+        margin: auto;
+        padding: 13px;
+    }
+   
 }
