--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,8 +1,16 @@
 @charset "utf-8";
 
-/* Para telas tablet e pc  */
+/* 
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px 
+*/
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+/* Para telas tablet */
+
+@media screen and (min-width: 768px) and (max-width: 800px) {
     body {
         background-image: linear-gradient(to bottom, var(--cor03), var(--cor05) );
         display: flex;
@@ -12,6 +20,93 @@
     main {
         width: 80vw;
         height: 300px;
+        display: flex;
+        align-items: center;
+        
+    }
+
+    section#imagem {
+        flex: 2;
+        height: 300px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        border-top-right-radius: 0px;
+    }
+
+    section#conteudo {
+       flex: 3;     
+          
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+    }
+
+    section > form > p {
+        width: 100%;
+        margin: 10px;
+        
+        margin-bottom: -5px;
+        max-width: 992px;
+        
+        padding: 2px;
+        border-radius: 7px;
+        text-align: right;
+
+       
+    }
+    
+    span {
+        flex: 1;
+        padding-right: 9px;
+    }
+
+    .email-sen {
+        max-width: 992px;
+        border: none;
+        border-radius: 7px;
+        padding: 10px;
+        flex: 10;
+    }
+    
+
+    input#entrar {
+        width: 101%;
+        border-radius: 7px;
+        color: white;
+        border: 0px;
+        background-color: var(--cor04);
+        margin: 10px 0;
+        margin-bottom: -5px;
+        text-align: center;
+        padding: 13px;
+        
+    }
+   
+    form > a {
+        width: 95%;
+        border-radius: 7px;
+        border: 2px solid var(--cor04);
+        margin: 10px 0;
+        text-align: center;
+        
+        
+        color: #394030;
+        text-decoration: none;
+        font-size: 0.8em;
+    }
+}
+
+/* Para telas maiores que PC */
+
+@media screen and (min-width: 1200px) {
+    main {
+        width: 90vw;
+        height: 500px;
         display: flex;
         align-items: center;
         
