--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -28,7 +28,7 @@ main {
     height: 520px;
     background-color: white;
     border-radius: 20px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.308);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.408);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -51,12 +51,10 @@ section > h1 {
 }
 
 section > p {
-    
     padding: 8px;
     font-size: 0.8em;
+    font-weight: 500;
 }
-
-
 
 section > form > p {
     max-width: 230px;
@@ -67,7 +65,6 @@ section > form > p {
     text-align: right;
     background-color: var(--cor05);
     display: flex;
-    
 }
 
 span {
@@ -94,8 +91,6 @@ span {
     flex: 12;
 }
 
-
-
 input#entrar {
     width: 235px;
     border-radius: 7px;
@@ -106,6 +101,7 @@ input#entrar {
     text-align: center;
     margin: auto;
     padding: 13px;
+    font-weight: 600;
 }
 
 input#entrar:hover {
@@ -124,6 +120,7 @@ form > a {
     color: #394030;
     text-decoration: none;
     font-size: 0.8em;
+    font-weight: 600;
 }
 
 form > a:hover {
