--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,11 @@ Verde: #49a09d
 Lilás: #5f2c82 
 */
 
+:root {
+    --corVerde: #49a09d;
+    --corLilas: #5f2c82;
+}
+
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
@@ -37,6 +42,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
