--- a/estilos/media-query-tablet.css
+++ b/estilos/media-query-tablet.css
@@ -31,7 +31,7 @@ Lilás: #5f2c82
         height: 100%;
     }
 
-    section#login > div#imagem {
+    section#login > div#formulario {
         float: right;
         width: 70%;
     }
