--- a/estilos/media-query-tablet.css
+++ b/estilos/media-query-tablet.css
@@ -47,15 +47,24 @@ Lilás: #5f2c82
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#imagem {
-        float: right;
+        float: left;
         width: 50%;
     }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulário > p {
+        font-size: 1.2em;
+    }
+    
 }
 
 
