--- a/estilos/style.css
+++ b/estilos/style.css
@@ -60,9 +60,14 @@ section#login > div#formulario {
     padding: 10px;
 }
 
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
 
-
-
+div#formulário > p {
+    font-size: 0.8em;
+}
 
 
 
