--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,7 +42,7 @@ section#login {
     height: 525px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
-    
+
     transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
@@ -105,6 +105,7 @@ div.campo > input {
 
 div.campo > input:focus-within {
     background-color: white;
+    outline: none;
 }
 
 form > input[type=submit] {
